P4/src/parser.output
Terminals unused in grammar

   eol_tok
   err_tok


State 46 conflicts: 7 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 59 conflicts: 7 shift/reduce
State 64 conflicts: 6 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 80 conflicts: 8 shift/reduce
State 120 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: %empty
    2         | CompUnit Decl
    3         | CompUnit FuncDef

    4 Decl: ConstDecl
    5     | VarDecl

    6 ConstDecl: const_tok int_tok MultiConstDef ';'
    7          | const_tok MultiConstDef ';'

    8 MultiConstDef: ConstDef
    9              | MultiConstDef ',' ConstDef

   10 ConstDef: ident_tok '=' Exp
   11         | ident_tok '[' Exp ']' '=' '{' MultiExp '}'
   12         | ident_tok '[' ']' '=' '{' MultiExp '}'

   13 VarDecl: int_tok MultiVar ';'

   14 MultiVar: Var
   15         | MultiVar ',' Var

   16 Var: ident_tok
   17    | ident_tok '[' Exp ']'
   18    | ident_tok '=' Exp
   19    | ident_tok '[' Exp ']' '=' '{' MultiExp '}'
   20    | ident_tok '[' ']' '=' '{' MultiExp '}'

   21 MultiExp: Exp
   22         | MultiExp ',' Exp

   23 FuncDef: void_tok ident_tok '(' ')' Block

   24 Block: '{' MultiBlock '}'

   25 MultiBlock: BlockItem
   26           | MultiBlock BlockItem

   27 BlockItem: %empty
   28          | Decl
   29          | Stmt

   30 Stmt: LVal '=' Exp ';'
   31     | ident_tok '(' ')' ';'
   32     | Block
   33     | while_tok '(' Cond ')' Stmt
   34     | ';'
   35     | if_tok '(' Cond ')' Stmt
   36     | if_tok '(' Cond ')' Stmt else_tok Stmt

   37 Cond: Exp RelOp Exp

   38 LVal: ident_tok
   39     | ident_tok '[' Exp ']'

   40 RelOp: equ_tok
   41      | nequ_tok
   42      | less_tok
   43      | more_tok
   44      | lessEqu_tok
   45      | moreEqu_tok

   46 Exp: num_tok
   47    | LVal
   48    | Exp '+' Exp
   49    | Exp '-' Exp
   50    | '-' Exp
   51    | '+' Exp
   52    | Exp '*' Exp
   53    | Exp '/' Exp
   54    | Exp '%' Exp
   55    | '(' Exp ')'
   56    | Exp error Exp
   57    | '(' Exp
   58    | Exp error ')'
   59    | error


Terminals, with rules where they appear

$end (0) 0
'%' (37) 54
'(' (40) 23 31 33 35 36 55 57
')' (41) 23 31 33 35 36 55 58
'*' (42) 52
'+' (43) 48 51
',' (44) 9 15 22
'-' (45) 49 50
'/' (47) 53
';' (59) 6 7 13 30 31 34
'=' (61) 10 11 12 18 19 20 30
'[' (91) 11 12 17 19 20 39
']' (93) 11 12 17 19 20 39
'{' (123) 11 12 19 20 24
'}' (125) 11 12 19 20 24
error (256) 56 58 59
num_tok (258) 46
const_tok (259) 6 7
int_tok (260) 6 13
void_tok (261) 23
if_tok (262) 35 36
else_tok (263) 36
while_tok (264) 33
ident_tok (265) 10 11 12 16 17 18 19 20 23 31 38 39
eol_tok (266)
err_tok (267)
equ_tok (268) 40
nequ_tok (269) 41
more_tok (270) 43
moreEqu_tok (271) 45
less_tok (272) 42
lessEqu_tok (273) 44
ONEOP (274)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
CompUnit (35)
    on left: 1 2 3, on right: 0 2 3
Decl (36)
    on left: 4 5, on right: 2 28
ConstDecl (37)
    on left: 6 7, on right: 4
MultiConstDef (38)
    on left: 8 9, on right: 6 7 9
ConstDef (39)
    on left: 10 11 12, on right: 8 9
VarDecl (40)
    on left: 13, on right: 5
MultiVar (41)
    on left: 14 15, on right: 13 15
Var (42)
    on left: 16 17 18 19 20, on right: 14 15
MultiExp (43)
    on left: 21 22, on right: 11 12 19 20 22
FuncDef (44)
    on left: 23, on right: 3
Block (45)
    on left: 24, on right: 23 32
MultiBlock (46)
    on left: 25 26, on right: 24 26
BlockItem (47)
    on left: 27 28 29, on right: 25 26
Stmt (48)
    on left: 30 31 32 33 34 35 36, on right: 29 33 35 36
Cond (49)
    on left: 37, on right: 33 35 36
LVal (50)
    on left: 38 39, on right: 30 47
RelOp (51)
    on left: 40 41 42 43 44 45, on right: 37
Exp (52)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59, on right: 10
    11 17 18 19 21 22 30 37 39 48 49 50 51 52 53 54 55 56 57 58


State 0

    0 $accept: . CompUnit $end

    $default  reduce using rule 1 (CompUnit)

    CompUnit  go to state 1


State 1

    0 $accept: CompUnit . $end
    2 CompUnit: CompUnit . Decl
    3         | CompUnit . FuncDef

    $end       shift, and go to state 2
    const_tok  shift, and go to state 3
    int_tok    shift, and go to state 4
    void_tok   shift, and go to state 5

    Decl       go to state 6
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 2

    0 $accept: CompUnit $end .

    $default  accept


State 3

    6 ConstDecl: const_tok . int_tok MultiConstDef ';'
    7          | const_tok . MultiConstDef ';'

    int_tok    shift, and go to state 10
    ident_tok  shift, and go to state 11

    MultiConstDef  go to state 12
    ConstDef       go to state 13


State 4

   13 VarDecl: int_tok . MultiVar ';'

    ident_tok  shift, and go to state 14

    MultiVar  go to state 15
    Var       go to state 16


State 5

   23 FuncDef: void_tok . ident_tok '(' ')' Block

    ident_tok  shift, and go to state 17


State 6

    2 CompUnit: CompUnit Decl .

    $default  reduce using rule 2 (CompUnit)


State 7

    4 Decl: ConstDecl .

    $default  reduce using rule 4 (Decl)


State 8

    5 Decl: VarDecl .

    $default  reduce using rule 5 (Decl)


State 9

    3 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 3 (CompUnit)


State 10

    6 ConstDecl: const_tok int_tok . MultiConstDef ';'

    ident_tok  shift, and go to state 11

    MultiConstDef  go to state 18
    ConstDef       go to state 13


State 11

   10 ConstDef: ident_tok . '=' Exp
   11         | ident_tok . '[' Exp ']' '=' '{' MultiExp '}'
   12         | ident_tok . '[' ']' '=' '{' MultiExp '}'

    '='  shift, and go to state 19
    '['  shift, and go to state 20


State 12

    7 ConstDecl: const_tok MultiConstDef . ';'
    9 MultiConstDef: MultiConstDef . ',' ConstDef

    ','  shift, and go to state 21
    ';'  shift, and go to state 22


State 13

    8 MultiConstDef: ConstDef .

    $default  reduce using rule 8 (MultiConstDef)


State 14

   16 Var: ident_tok .
   17    | ident_tok . '[' Exp ']'
   18    | ident_tok . '=' Exp
   19    | ident_tok . '[' Exp ']' '=' '{' MultiExp '}'
   20    | ident_tok . '[' ']' '=' '{' MultiExp '}'

    '='  shift, and go to state 23
    '['  shift, and go to state 24

    $default  reduce using rule 16 (Var)


State 15

   13 VarDecl: int_tok MultiVar . ';'
   15 MultiVar: MultiVar . ',' Var

    ','  shift, and go to state 25
    ';'  shift, and go to state 26


State 16

   14 MultiVar: Var .

    $default  reduce using rule 14 (MultiVar)


State 17

   23 FuncDef: void_tok ident_tok . '(' ')' Block

    '('  shift, and go to state 27


State 18

    6 ConstDecl: const_tok int_tok MultiConstDef . ';'
    9 MultiConstDef: MultiConstDef . ',' ConstDef

    ','  shift, and go to state 21
    ';'  shift, and go to state 28


State 19

   10 ConstDef: ident_tok '=' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 36


State 20

   11 ConstDef: ident_tok '[' . Exp ']' '=' '{' MultiExp '}'
   12         | ident_tok '[' . ']' '=' '{' MultiExp '}'

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    ']'        shift, and go to state 37
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 38


State 21

    9 MultiConstDef: MultiConstDef ',' . ConstDef

    ident_tok  shift, and go to state 11

    ConstDef  go to state 39


State 22

    7 ConstDecl: const_tok MultiConstDef ';' .

    $default  reduce using rule 7 (ConstDecl)


State 23

   18 Var: ident_tok '=' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 40


State 24

   17 Var: ident_tok '[' . Exp ']'
   19    | ident_tok '[' . Exp ']' '=' '{' MultiExp '}'
   20    | ident_tok '[' . ']' '=' '{' MultiExp '}'

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    ']'        shift, and go to state 41
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 42


State 25

   15 MultiVar: MultiVar ',' . Var

    ident_tok  shift, and go to state 14

    Var  go to state 43


State 26

   13 VarDecl: int_tok MultiVar ';' .

    $default  reduce using rule 13 (VarDecl)


State 27

   23 FuncDef: void_tok ident_tok '(' . ')' Block

    ')'  shift, and go to state 44


State 28

    6 ConstDecl: const_tok int_tok MultiConstDef ';' .

    $default  reduce using rule 6 (ConstDecl)


State 29

   59 Exp: error .

    $default  reduce using rule 59 (Exp)


State 30

   46 Exp: num_tok .

    $default  reduce using rule 46 (Exp)


State 31

   38 LVal: ident_tok .
   39     | ident_tok . '[' Exp ']'

    '['  shift, and go to state 45

    $default  reduce using rule 38 (LVal)


State 32

   55 Exp: '(' . Exp ')'
   57    | '(' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 46


State 33

   51 Exp: '+' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 47


State 34

   50 Exp: '-' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 48


State 35

   47 Exp: LVal .

    $default  reduce using rule 47 (Exp)


State 36

   10 ConstDef: ident_tok '=' Exp .
   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   58    | Exp . error ')'

    error  shift, and go to state 49
    '+'    shift, and go to state 50
    '-'    shift, and go to state 51
    '*'    shift, and go to state 52
    '/'    shift, and go to state 53
    '%'    shift, and go to state 54

    ','  reduce using rule 10 (ConstDef)
    ';'  reduce using rule 10 (ConstDef)


State 37

   12 ConstDef: ident_tok '[' ']' . '=' '{' MultiExp '}'

    '='  shift, and go to state 55


State 38

   11 ConstDef: ident_tok '[' Exp . ']' '=' '{' MultiExp '}'
   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   58    | Exp . error ')'

    error  shift, and go to state 49
    ']'    shift, and go to state 56
    '+'    shift, and go to state 50
    '-'    shift, and go to state 51
    '*'    shift, and go to state 52
    '/'    shift, and go to state 53
    '%'    shift, and go to state 54


State 39

    9 MultiConstDef: MultiConstDef ',' ConstDef .

    $default  reduce using rule 9 (MultiConstDef)


State 40

   18 Var: ident_tok '=' Exp .
   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   58    | Exp . error ')'

    error  shift, and go to state 49
    '+'    shift, and go to state 50
    '-'    shift, and go to state 51
    '*'    shift, and go to state 52
    '/'    shift, and go to state 53
    '%'    shift, and go to state 54

    ','  reduce using rule 18 (Var)
    ';'  reduce using rule 18 (Var)


State 41

   20 Var: ident_tok '[' ']' . '=' '{' MultiExp '}'

    '='  shift, and go to state 57


State 42

   17 Var: ident_tok '[' Exp . ']'
   19    | ident_tok '[' Exp . ']' '=' '{' MultiExp '}'
   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   58    | Exp . error ')'

    error  shift, and go to state 49
    ']'    shift, and go to state 58
    '+'    shift, and go to state 50
    '-'    shift, and go to state 51
    '*'    shift, and go to state 52
    '/'    shift, and go to state 53
    '%'    shift, and go to state 54


State 43

   15 MultiVar: MultiVar ',' Var .

    $default  reduce using rule 15 (MultiVar)


State 44

   23 FuncDef: void_tok ident_tok '(' ')' . Block

    '{'  shift, and go to state 59

    Block  go to state 60


State 45

   39 LVal: ident_tok '[' . Exp ']'

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 61


State 46

   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   55    | '(' Exp . ')'
   56    | Exp . error Exp
   57    | '(' Exp .
   58    | Exp . error ')'

    error  shift, and go to state 49
    ')'    shift, and go to state 62
    '+'    shift, and go to state 50
    '-'    shift, and go to state 51
    '*'    shift, and go to state 52
    '/'    shift, and go to state 53
    '%'    shift, and go to state 54

    error        [reduce using rule 57 (Exp)]
    ','          reduce using rule 57 (Exp)
    ';'          reduce using rule 57 (Exp)
    '}'          reduce using rule 57 (Exp)
    ']'          reduce using rule 57 (Exp)
    ')'          [reduce using rule 57 (Exp)]
    equ_tok      reduce using rule 57 (Exp)
    nequ_tok     reduce using rule 57 (Exp)
    more_tok     reduce using rule 57 (Exp)
    moreEqu_tok  reduce using rule 57 (Exp)
    less_tok     reduce using rule 57 (Exp)
    lessEqu_tok  reduce using rule 57 (Exp)
    '+'          [reduce using rule 57 (Exp)]
    '-'          [reduce using rule 57 (Exp)]
    '*'          [reduce using rule 57 (Exp)]
    '/'          [reduce using rule 57 (Exp)]
    '%'          [reduce using rule 57 (Exp)]


State 47

   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   51    | '+' Exp .
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   58    | Exp . error ')'

    error  shift, and go to state 49

    error        [reduce using rule 51 (Exp)]
    ','          reduce using rule 51 (Exp)
    ';'          reduce using rule 51 (Exp)
    '}'          reduce using rule 51 (Exp)
    ']'          reduce using rule 51 (Exp)
    ')'          reduce using rule 51 (Exp)
    equ_tok      reduce using rule 51 (Exp)
    nequ_tok     reduce using rule 51 (Exp)
    more_tok     reduce using rule 51 (Exp)
    moreEqu_tok  reduce using rule 51 (Exp)
    less_tok     reduce using rule 51 (Exp)
    lessEqu_tok  reduce using rule 51 (Exp)
    '+'          reduce using rule 51 (Exp)
    '-'          reduce using rule 51 (Exp)
    '*'          reduce using rule 51 (Exp)
    '/'          reduce using rule 51 (Exp)
    '%'          reduce using rule 51 (Exp)


State 48

   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   50    | '-' Exp .
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   58    | Exp . error ')'

    error  shift, and go to state 49

    error        [reduce using rule 50 (Exp)]
    ','          reduce using rule 50 (Exp)
    ';'          reduce using rule 50 (Exp)
    '}'          reduce using rule 50 (Exp)
    ']'          reduce using rule 50 (Exp)
    ')'          reduce using rule 50 (Exp)
    equ_tok      reduce using rule 50 (Exp)
    nequ_tok     reduce using rule 50 (Exp)
    more_tok     reduce using rule 50 (Exp)
    moreEqu_tok  reduce using rule 50 (Exp)
    less_tok     reduce using rule 50 (Exp)
    lessEqu_tok  reduce using rule 50 (Exp)
    '+'          reduce using rule 50 (Exp)
    '-'          reduce using rule 50 (Exp)
    '*'          reduce using rule 50 (Exp)
    '/'          reduce using rule 50 (Exp)
    '%'          reduce using rule 50 (Exp)


State 49

   56 Exp: Exp error . Exp
   58    | Exp error . ')'

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    ')'        shift, and go to state 63
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 64


State 50

   48 Exp: Exp '+' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 65


State 51

   49 Exp: Exp '-' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 66


State 52

   52 Exp: Exp '*' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 67


State 53

   53 Exp: Exp '/' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 68


State 54

   54 Exp: Exp '%' . Exp

    error      shift, and go to state 29
    num_tok    shift, and go to state 30
    ident_tok  shift, and go to state 31
    '('        shift, and go to state 32
    '+'        shift, and go to state 33
    '-'        shift, and go to state 34

    LVal  go to state 35
    Exp   go to state 69


State 55

   12 ConstDef: ident_tok '[' ']' '=' . '{' MultiExp '}'

    '{'  shift, and go to state 70


State 56

   11 ConstDef: ident_tok '[' Exp ']' . '=' '{' MultiExp '}'

    '='  shift, and go to state 71


State 57

   20 Var: ident_tok '[' ']' '=' . '{' MultiExp '}'

    '{'  shift, and go to state 72


State 58

   17 Var: ident_tok '[' Exp ']' .
   19    | ident_tok '[' Exp ']' . '=' '{' MultiExp '}'

    '='  shift, and go to state 73

    $default  reduce using rule 17 (Var)


State 59

   24 Block: '{' . MultiBlock '}'

    const_tok  shift, and go to state 3
    int_tok    shift, and go to state 4
    if_tok     shift, and go to state 74
    while_tok  shift, and go to state 75
    ident_tok  shift, and go to state 76
    ';'        shift, and go to state 77
    '{'        shift, and go to state 59

    const_tok  [reduce using rule 27 (BlockItem)]
    int_tok    [reduce using rule 27 (BlockItem)]
    if_tok     [reduce using rule 27 (BlockItem)]
    while_tok  [reduce using rule 27 (BlockItem)]
    ident_tok  [reduce using rule 27 (BlockItem)]
    ';'        [reduce using rule 27 (BlockItem)]
    '{'        [reduce using rule 27 (BlockItem)]
    $default   reduce using rule 27 (BlockItem)

    Decl        go to state 78
    ConstDecl   go to state 7
    VarDecl     go to state 8
    Block       go to state 79
    MultiBlock  go to state 80
    BlockItem   go to state 81
    Stmt        go to state 82
    LVal        go to state 83


State 60

   23 FuncDef: void_tok ident_tok '(' ')' Block .

    $default  reduce using rule 23 (FuncDef)


State 61

   39 LVal: ident_tok '[' Exp . ']'
   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   58    | Exp . error ')'

    error  shift, and go to state 49
    ']'    shift, and go to state 84
    '+'    shift, and go to state 50
    '-'    shift, and go to state 51
    '*'    shift, and go to state 52
    '/'    shift, and go to state 53
    '%'    shift, and go to state 54


State 62

   55 Exp: '(' Exp ')' .

    $default  reduce using rule 55 (Exp)


State 63

   58 Exp: Exp error ')' .

    $default  reduce using rule 58 (Exp)


State 64

   48 Exp: Exp . '+' Exp
   49    | Exp . '-' Exp
   52    | Exp . '*' Exp
   53    | Exp . '/' Exp
   54    | Exp . '%' Exp
   56    | Exp . error Exp
   56    | Exp error Exp .
   58    | Exp . error ')'

    error  shift, and go to state 49
    '+'    shift, and go to state 50
    '-'    shift, and go to state 51
    '*'    shift, and go to state 52
    '/'    shift, and go to state 53
    '%'    shift, and go to state 54
